Maqueta header Estiliza header light mode

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include "layouts/header.html" %} 
-    {% block body %}
+    {% block main %}
       {{ content | safe }}
     {% endblock %}
   </body>
