--- a/src/_includes/layouts/header.html
+++ b/src/_includes/layouts/header.html
@@ -1,17 +1,28 @@
 <header>
   <nav>
-    <img src="/assets/images/logo.svg" alt="Logo">
-    <span>
-      <p>Achique</p>
-      <p>Luis Daniel</p>
-    </span>
-    <span>
-      BLOG
-    </span>
-    <input type="text" placeholder="Buscar">
-    <img src="/assets/icons/light.svg" alt="Selector de modo claro o oscuro.">
-    <a href="?">
-      <img src="/assets/icons/github.svg" alt="Enlace al repositorio del blog en GitHub">
+    <div class="branding">
+      <img src="/assets/images/logo.svg" alt="Logo">
+      <span class="name">
+        <p>Achique</p>
+        <p>Luis Daniel</p>
+      </span>
+      <span class="blog">
+        BLOG
+      </span>
+    </div>
+    <div class="box-search">
+      <img src="/assets/icons/lens.svg" alt="Icono de lupa." class="lens">
+      <input type="text" placeholder="Buscar" class="search">
+    </div>
+    <div class="mode">
+      <img src="/assets/icons/light.svg" alt="Selector de modo claro o oscuro." >
+    </div>
+    <a href="?" class="github">
+      <span class="badge">
+        7       
+        <img src="/assets/icons/start_dark.svg" alt="Icono estrella.">
+      </span>
+      <img src="/assets/icons/github.svg" alt="Enlace al repositorio del blog en GitHub.">
     </a>
   </nav>
 </header>
