Crea componente header Estiliza componente header mode light Agrega imágenes al header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,3 +104,10 @@ span.badge {
     margin-top: -10px;
     margin-left: 20px;
 }
+
+main.container {
+    padding-top: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 2%;
+}
