--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
     --surface: #f2f2f2;
     --surface-hover: #d3d3d3;
     --on-surface: #333333;
-    --primary: #ef6c58;
+    --primary: #f79137;
     --primary-hover: #eb5f4a;
     --primary-focused: #fb9383;
     --secondary: #391400;
@@ -118,4 +118,171 @@ pre.language-javascript {
 
 span.parameter {
     color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+a.to-post {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    padding: 1%;
+    padding-left: 30px;
+}
+
+a.to-post > div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 6%;
+}
+
+a.to-post:hover, a.to-tag:hover  {
+    background-color: #cccccc;
+    border-radius: 50px;
+}
+
+span.date {
+    color: #808080;
+    font-size: small;
+}
+
+h2 {
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+main.home {
+    display: flex;
+    gap: 10px;
+}
+
+main.home > aside {
+    width: 25%;
+    padding: 2%;
+    border-right: #cccccc solid 1px;
+}
+
+main.home > section {
+    width: 75%;
+}
+
+aside.sidebar {
+    text-align: center;
+}
+
+a.to-tag {
+    display: flex;
+    padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #f2f2f2ff;
+    margin-bottom: 6px;
+    border-radius: 30px;
+    align-items: center;
+}
+
+a.to-tag > .title {
+    width: 80%;
+    text-align: left;
+    padding-left: 10px;
+}
+
+
+
+li.to-tag {
+    display: flex;
+    padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #999999;
+    margin-bottom: 6px;
+    border-radius: 30px;
+    align-items: center;
+   
+}
+
+li.to-tag > .title {
+    width: 50%;
+    color: white;
+    text-align: left;
+}
+
+li.to-tag > .qty {
+    width: 50%;
+    color: white;
+    text-align: right;
+}
+
+h3.rol {
+    color: #b3b3b3;
+    margin-bottom: 20px;
+}
+
+p.description {
+    margin-bottom: 30px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: min-content;
+}
+
+
+footer {
+    text-align: center;
+    color: #333333;
+    padding: 2%;
+    padding-top: 1%;
+    font-weight: bold;
+   
+}
+
+main {
+    min-height: calc(80vh );
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color:  #0c0c0c4d;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
+    border-radius: 10px;
+    border: 5px;
+  }
+
+
+@media screen  and (max-width: 640px){
+    main.home {
+        flex-direction: column;
+    }
+    main.home > aside {
+        width: 100%;
+        border-right: none;
+    }
+    main.home > section {
+        width: 100%;
+    }
+}
+
+
+ul.posts {
+    margin-top: 16px;
+}
+
+.primary:hover {
+    color: var(--primary);
 }
