style: :lipstick: Amplia y agrega scroll al ancho de las imágenes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -496,3 +496,11 @@ p {
 h3 {
   margin-bottom: 12px;
 }
+
+main.content p {
+  overflow: auto;
+}
+
+main.content p >  img {
+  width: min-content;
+}
