refactor: :recycle: Anexa imágenes y vídeo al artículo análisis de ventas

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -554,3 +554,8 @@ div.card-author img.circle-photo {
 }
 
 
+iframe.video {
+  min-width: 100%;
+  min-height: 800px;
+  background: var(--background);
+}
